--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^8.0.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "uuid": "^9.0.1"
