--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "uuid": "^9.0.1"
